--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "start-pre-build:win32": "cd app && .\\node_modules\\.bin\\electron .\\..\\build\\es6bundle\\main.js --inspect=5858",
     "test": "cd app && ./node_modules/.bin/polymer test -l chrome",
     "dist": "electron-builder -c.extraMetadata.main=main.js -wl",
+    "release": "electron-builder -c.extraMetadata.main=main.js -wl -p always",
     "clear-all": "run-script-os",
     "clear-all:linux:darwin": "rm -rf app/node_modules && rm -rf build && rm -rf releases",
     "clear-all:win32": "rmdir /Q /S  app\\node_modules && rmdir /Q /S build && rmdir /Q /S releases"
