--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     resource_class: large
     docker:
       # specify the version you desire here
-      - image: circleci/node:11.8.0-stretch-browsers
+      - image: circleci/node:17.2.0-stretch-browsers-legacy
 
     working_directory: ~/repo
 
