--- a/app/module/playlist/package.json
+++ b/app/module/playlist/package.json
@@ -1,6 +1,7 @@
 {
     "title": "Playlist",
     "name": "playlist",
+    "core": true,   
     "icon": "playlist:menu",
     "configEntryPoint": "repository.js",
     "entryPoint": {
