--- a/app/module/dashboard/package.json
+++ b/app/module/dashboard/package.json
@@ -2,6 +2,7 @@
     "title": "Dashboard",
     "name": "dashboard",
     "core": true,
+    "sort": 1,
     "icon": "dashboard:menu",
     "entryPoint": {
         "name": "dashboard-index",
