--- a/app/module/timeslot/package.json
+++ b/app/module/timeslot/package.json
@@ -2,6 +2,7 @@
     "title": "Timeslot",
     "name": "timeslot",
     "core": true,
+    "sort": 5,
     "icon": "timeslot:menu",
     "configEntryPoint": "repository.js",
     "entryPoint": {
