--- a/app/module/monitor/package.json
+++ b/app/module/monitor/package.json
@@ -2,6 +2,7 @@
     "title": "Monitor",
     "name": "monitor",
     "core": true,
+    "sort": 2,
     "icon": "monitor:menu",
     "entryPoint": {
         "name": "monitor-index",
