Fix resource sender

--- a/app/config/config.json.dist
+++ b/app/config/config.json.dist
@@ -219,6 +219,14 @@
 					}
 				},
 				{
+					"name": "ResourceSenderEntity",
+					"path": {
+						"directory": "src/entity",
+						"nameFile": "ResourceSenderEntity",
+						"extension": "js"
+					}
+				},
+				{
 					"name": "ImageEntity",
 					"path": {
 						"directory": "src/entity",
