--- a/app/module/dashboard/package.json
+++ b/app/module/dashboard/package.json
@@ -32,5 +32,7 @@
                 "extension": "js"
             }
         }
-    ]
+    ],
+    "adminViewComponent": [],
+    "shortcutComponent": []
 }
