--- a/app/module/monitor/package.json
+++ b/app/module/monitor/package.json
@@ -96,5 +96,7 @@
                 "extension": "js"
             }
         }
-    ]
+    ],
+    "adminViewComponent": [],
+    "shortcutComponent": []
 }
