--- a/app/module/playlist/package.json
+++ b/app/module/playlist/package.json
@@ -64,5 +64,7 @@
                 "extension": "js"
             }
         }
-    ]
+    ],
+    "adminViewComponent": [],
+    "shortcutComponent": []
 }
