--- a/app/module/resource/package.json
+++ b/app/module/resource/package.json
@@ -121,5 +121,7 @@
                 "extension": "js"
             }
         }
-    ]
+    ],
+    "adminViewComponent": [],
+    "shortcutComponent": []
 }
