--- a/app/module/admin/package.json
+++ b/app/module/admin/package.json
@@ -31,6 +31,14 @@
                 "nameFile": "module-config",
                 "extension": "js"
             }
+        },
+        {
+            "name": "token-config",
+            "path": {
+                "directory": "element/token-config",
+                "nameFile": "token-config",
+                "extension": "js"
+            }
         }
     ],
     "shortcutComponent": []
