--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "version": "1.0.0",
+  "version": "0.1.0-beta",
   "author": "antonino.visalli@gmail.com",
   "name": "dsign-player",
-  "description": "Polymer 3 in an electron application",
+  "description": "Dsign player to run content on monitors",
   "repository": "git@github.com:dsignn/player.git",
   "license": "BSD-3-Clause",
   "devDependencies": {
@@ -37,7 +37,7 @@
     "appId": "dsign.player",
     "productName": "Dsign player",
     "asar": false,
-    "electronVersion": "24.1.0",
+    "electronVersion": "28.2.0",
     "npmRebuild": false,
     "publish": {
       "provider": "github",
