--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.0",
+  "version": "0.1.0-beta",
   "author": "antonino.visalli@gmail.com",
   "name": "dsign-player",
   "description": "Dsign player to run content on monitors",
